--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @plugin "daisyui";
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+}
+@custom-variant dark (&:where([data-theme=night], [data-theme=night] *));
 
 .btn-primary {
   @apply bg-[#9929fb] border-0;
