--- a/index.css
+++ b/index.css
@@ -10,3 +10,11 @@
 body {
   font-family: "Work Sans", sans-serif;
 }
+.content{
+    @media screen and (min-width: 1024px) {
+        width: 1320px;
+    }
+    @media screen and (max-width: 1320px) {
+        width: 100%;
+    }
+}
