--- a/index.css
+++ b/index.css
@@ -38,3 +38,9 @@ body {
   line-height: 56px;
   color: #132238;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
