--- a/src/components/introduction/introduction.css
+++ b/src/components/introduction/introduction.css
@@ -1,5 +1,5 @@
 .bg-highlight {
-  background: linear-gradient(to top, rgb(222, 167, 1) 50%, transparent 50%);
+  background: linear-gradient(to top, #ffc8c8 40%, transparent 40%);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   padding-left: 2px;
