--- a/index.css
+++ b/index.css
@@ -33,11 +33,11 @@ body {
 .introduction-profile-background {
   background: radial-gradient(
       circle at 15% 100%,
-      #ffe2b0f5 1% 10px,
-      transparent 20%
-    ),
-    radial-gradient(circle at 95% -15%, #da4df166 5%, transparent 30%),
-    radial-gradient(circle at center right, #c4f5e9b2 2%, transparent 35%);
+      #ffe2b0f5 1% 5px,
+      transparent 15%
+    ), /* bottom left */
+    radial-gradient(circle at 95% -15%, #da4df166 5%, transparent 30%), /* top right */
+    radial-gradient(circle at center right, #c4f5e9b2 2%, transparent 35%); /* center right */
 }
 .blog-background {
   background: radial-gradient(circle at -10% 0%, #da4df166 1%, transparent 25%),
