--- a/index.css
+++ b/index.css
@@ -18,6 +18,9 @@ body {
   @media screen and (max-width: 1320px) {
     width: 100%;
   }
+  @media screen and (max-width: 1280px) {
+    width: 100vw;
+  }
 }
 
 .center {
