--- a/index.css
+++ b/index.css
@@ -4,6 +4,10 @@
   themes: light --default, dark --prefersdark, cupcake;
 }
 
+@theme {
+  --breakpoint-xs: 35rem;
+}
+
 .btn-primary {
   @apply bg-[#A53DFF] border-0 text-white;
 }
@@ -38,9 +42,11 @@ body {
       circle at 15% 100%,
       #ffe2b0f5 1% 5px,
       transparent 15%
-    ), /* bottom left */
-    radial-gradient(circle at 95% -15%, #da4df166 5%, transparent 30%), /* top right */
-    radial-gradient(circle at center right, #c4f5e9b2 2%, transparent 35%); /* center right */
+    ),
+    /* bottom left */
+      radial-gradient(circle at 95% -15%, #da4df166 5%, transparent 30%),
+    /* top right */
+      radial-gradient(circle at center right, #c4f5e9b2 2%, transparent 35%); /* center right */
 }
 .blog-background {
   background: radial-gradient(circle at -10% 0%, #da4df166 1%, transparent 25%),
