--- a/index.css
+++ b/index.css
@@ -39,26 +39,13 @@ NOTE: 1px = 0.0625rem; 1rem = 16px
 body {
   font-family: "Work Sans", sans-serif;
 }
-@media screen and (max-width: 1319px) {
-  .content {
-    width: 100%;
-  }
+
+.content {
+  @apply max-xxl:w-full min-xxl:max-w-[1320px] min-xxl:mx-auto;
 }
 
-@media screen and (min-width: 1320px) {
-  .content {
-    width: 1320px;
-    margin-inline: auto;
-  }
-}
-
-@media screen and (max-width: 640px) {
-  .section-title {
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 48px;
-    color: #132238;
-  }
+.section-title {
+  @apply text-[#132238] font-semibold text-5xl max-sm:text-4xl max-sm:font-medium;
 }
 
 .center {
@@ -81,10 +68,4 @@ body {
 .blog-background {
   background: radial-gradient(circle at -10% 0%, #da4df166 1%, transparent 25%),
     radial-gradient(circle at 110% 30%, #c4f5e9b2 5%, transparent 25%);
-}
-.section-title {
-  font-weight: 600;
-  font-size: 48px;
-  line-height: 56px;
-  color: #132238;
 }
